@@ -49,6 +49,14 @@ Retired features:
  - Support for autoencoder strategy in the summarize images callback was removed
  - Removed deprecated Layer protobuf fields: weight_data,
    num_neurons_from_data_reader
+ - Removed support for calculating a global mini-batch across multiple
+   models and trainers.  The mini-batch is now strictly contained to a
+   single trainer.  This deprecates an unused (and old) multi-model
+   execution mode that predated LTFB.
+ - [TODO] Remove the notion of effective mini-batch size versus
+   current mini-batch size
+ - [TODO] Remove world master mini-batch adjustment
+ - [TODO] Remove model stride
 
 ============================== Release Notes: v0.103 ==============================
 C++ API:
